--- a/practica1/index.html
+++ b/practica1/index.html
@@ -17,3 +17,10 @@
     <script src="./js/main.js"></script>
   </body>
 </html>
+
+<!-- 
+git add .            | Añade todos los cambios en archivos, excepto en los eliminados
+git add -u           | Añadir solo los archivos existentes modificados
+git add *<extensión> | Añade todos los archivos con dicha extensión 
+git add --help       | Ayuda sobre el comando
+-->
