--- a/practica1/index.html
+++ b/practica1/index.html
@@ -14,6 +14,9 @@
       animi recusandae delectus numquam. Architecto laborum aspernatur amet rem
       facilis doloribus quae!
     </h1>
+    <footer>
+      <p>&copy;ACME Todos los derechos reservados</p>
+    </footer>
     <script src="./js/main.js"></script>
   </body>
 </html>
