--- a/practica1/index.html
+++ b/practica1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
   <body>
@@ -14,6 +14,12 @@
       animi recusandae delectus numquam. Architecto laborum aspernatur amet rem
       facilis doloribus quae!
     </h1>
+    <section>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
+        deleniti nisi dolor delectus ipsa harum.
+      </p>
+    </section>
     <script src="./js/main.js"></script>
   </body>
 </html>
