añade una tabla

--- a/practica1/index.html
+++ b/practica1/index.html
@@ -23,6 +23,16 @@
     <footer>
       <p>&copy;ACME Todos los derechos reservados</p>
     </footer>
+
+    <table>
+      <th>
+        Saludos
+      </th>
+      <tr>
+        <td>Hola amigos</td>
+      </tr>
+    </table>
+    
     <script src="./js/main.js"></script>
   </body>
 </html>
