--- a/practica1/index.html
+++ b/practica1/index.html
@@ -31,6 +31,9 @@
       <tr>
         <td>Hola amigos</td>
       </tr>
+      <tr>
+        <td><p>Holaaaaa</p></td>
+      </tr>
     </table>
     
     <script src="./js/main.js"></script>
