--- a/practica1/index.html
+++ b/practica1/index.html
@@ -8,6 +8,12 @@
     <title>Document</title>
   </head>
   <body>
+        <header>
+      <ul>
+        <li>Inicio</li>
+        <li>Contacto</li>
+      </ul>
+    </header>
     <h1>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda
       impedit illo officiis odit aperiam consequatur praesentium minus autem,
